refactor: enforce SLA file-I/O ownership - route test-case persist/delete, cut-paste, test-set class gen, and project existence checks through the indexer/generateJavaCode